[package]
name = "craft"
description = "Node package manager on Rust"
authors = ["Shahen Hovhannisyan <shahen.hovhannisyan.94@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.75"
futures = "0.3.30"
async-recursion = "1.0.5"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

semver = "1.0.20"
colored = "2.1.0"

tar = "0.4.35"
flate2 = "1.0.28"

thiserror = "1.0.24"
