[package]
name = "craft"
description = "Node package manager on Rust"
authors = ["Shahen Hovhannisyan <shahen.hovhannisyan.94@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.75"
async-recursion = "1.0.5"
homedir = "0.3.3"
serde_yaml_ng = "0.10.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

colored = "2.1.0"

tar = "0.4.35"
flate2 = "1.0.28"

thiserror = "1.0.24"
regex = "1.10.2"

indicatif = "0.17.8"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
indicatif-log-bridge= "0.2.3"
log = "0.4.22"
lazy_static = "1.4.0"
fs_extra = "1.3.0"
sha1 = "0.11.0-pre.4"
hex = "0.4.3"
nodejs-semver = "4.0.0"
chrono = "0.4.38"
env_logger = "0.11.5"

junction = "1.2.0"
futures = "0.3.30"
